<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/submitFormBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_with_shadow"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="Drop a Incident"
        android:textColor="#FFF"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/titleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text=" Incident Type"
        android:textColor="#9E9E9E"
        android:layout_marginBottom="5dp"
        android:textSize="12dp" />

    <Spinner
        android:id="@+id/typeCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/locationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:inputType="text"
            android:focusable="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/locationDescriptionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/locationDescriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Location Remarks"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:weightSum="10">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9">

            <EditText
                android:id="@+id/descriptionInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Incident Description"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/uploadImageButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_toRightOf="@id/descriptionInput"
            android:src="@drawable/ic_add_image" />
    </LinearLayout>

    <ImageView
        android:id="@+id/showImage"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <Button
            android:id="@+id/submitRequestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SUBMIT REQUEST"
            android:foreground="?attr/selectableItemBackground"
            android:background="#000"
            android:textColor="#fff"/>

        <ProgressBar
            android:id="@+id/submitRequestProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:layout_gravity="top"
            android:visibility="invisible"
            android:indeterminate="true"
            android:indeterminateTint="#fff"
            android:indeterminateTintMode="src_in"/>
    </RelativeLayout>

</LinearLayout>