...
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            app:layout_anchor="@id/submitFormBottomSheet"
            app:layout_anchorGravity="top|end">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/myLocationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_mylocation"
                app:backgroundTint="#FFFFFF" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/toggleBottomSheetButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:src="@drawable/ic_addlocation"
...
