<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="category_array">
        <item>Flood</item>
        <item>Fire Incident</item>
        <item>Terrorist Attack</item>
        <item>Chemical Leaking</item>
        <item>Tsunami</item>
        <item>Typhoon</item>
    </string-array>
</resources>